--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.5.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 Django==4.0.3
 gunicorn==20.1.0
+idna==3.3
 python-dotenv==0.20.0
 requests==2.27.1
 sqlparse==0.4.2
