BUGFIX: Github actions yml changing to wrong directory

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -17,7 +17,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           
           script: |
-            cd digitalocean
+            cd apiconsumer
             docker-compose down -v
             git pull origin master
             docker-compose build
